[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
itertools = "0.12.0"
regex = "1.5.4"
rayon = "1.8.0"
md5 = "0.7.0"
blockingqueue = "0.1.1"
priority-queue = "1.3.2"
serde_json = "1.0.108"
